--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,10 @@
 		<meta charset="utf-8" />
 		<title>PokeAngular</title>
 		<base href="/" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta
+			content="width=device-width, initial-scale=1, minimum-scale=1"
+			name="viewport"
+		/>
 		<link rel="icon" type="image/x-icon" href="favicon.ico" />
 		<link
 			rel="stylesheet"
