--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,10 @@
 			href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700&display=swap"
 			rel="stylesheet"
 		/>
+		<link
+			href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900&display=swap"
+			rel="stylesheet"
+		/>
 	</head>
 	<body>
 		<app-root class="main-page"></app-root>
